clash-brush-parser/src/parser/tests/snapshots/clash_brush_parser__parser__tests__functions__parse_function_with_local_vars.snap
---
source: clash-brush-parser/src/parser/tests/functions.rs
assertion_line: 94
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "foo() {\n    local x=1\n    echo $x\n}",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Function(FunctionDefinition(
                fname: Word(
                  value: "foo",
                  loc: "[location]",
                ),
                body: FunctionBody(BraceGroup(BraceGroupCommand(
                  list: CompoundList([
                    CompoundListItem(AndOrList(
                      first: Pipeline(
                        seq: [
                          Simple(SimpleCommand(
                            word_or_name: Some(Word(
                              value: "local",
                              loc: "[location]",
                            )),
                            suffix: Some(CommandSuffix([
                              AssignmentWord(Assignment(
                                name: VariableName("x"),
                                value: Scalar(Word(
                                  value: "1",
                                  loc: "[location]",
                                )),
                                loc: "[location]",
                              ), Word(
                                value: "x=1",
                                loc: "[location]",
                              )),
                            ])),
                          )),
                        ],
                      ),
                    ), Sequence),
                    CompoundListItem(AndOrList(
                      first: Pipeline(
                        seq: [
                          Simple(SimpleCommand(
                            word_or_name: Some(Word(
                              value: "echo",
                              loc: "[location]",
                            )),
                            suffix: Some(CommandSuffix([
                              Word(Word(
                                value: "$x",
                                loc: "[location]",
                              )),
                            ])),
                          )),
                        ],
                      ),
                    ), Sequence),
                  ]),
                  loc: "[location]",
                )), None),
              )),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
