clash-brush-parser/src/parser/tests/snapshots/clash_brush_parser__parser__tests__functions__parse_function_with_subshell_body.snap
---
source: clash-brush-parser/src/parser/tests/functions.rs
assertion_line: 80
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "foo() ( echo subshell )",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Function(FunctionDefinition(
                fname: Word(
                  value: "foo",
                  loc: "[location]",
                ),
                body: FunctionBody(Subshell(SubshellCommand(
                  list: CompoundList([
                    CompoundListItem(AndOrList(
                      first: Pipeline(
                        seq: [
                          Simple(SimpleCommand(
                            word_or_name: Some(Word(
                              value: "echo",
                              loc: "[location]",
                            )),
                            suffix: Some(CommandSuffix([
                              Word(Word(
                                value: "subshell",
                                loc: "[location]",
                              )),
                            ])),
                          )),
                        ],
                      ),
                    ), Sequence),
                  ]),
                  loc: "[location]",
                )), None),
              )),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
